trying to fix content alignment

--- a/style.css
+++ b/style.css
@@ -6,18 +6,55 @@
   box-sizing: border-box;
 }
 
+/* .container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 0px;
+  justify-content: center;
+  height: 100px;
+  width: 300px;
+} */
+
 .container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  gap: 25px;
   justify-content: center;
+  padding: 20px;
 }
+
+/* article {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+} */
 
 article {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  align-items: center;
+  justify-content: space-between;
+  width: 300px;
+  height: auto;
+  padding: 20px;
+  color: white;
+  border-radius: 8px;
+}
+
+button {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 50px;
+  height: 30px;
+  background-color: white;
+  border: none;
+  border-radius: 0px;
 }
 
 .SEDAN {
